work on styles and appendices / vignettes

--- a/_posts/thesis_chapters/2025-1-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-1-6-Gdps.md
@@ -97,7 +97,7 @@ title:  6. The Use of Gameplay Design Patterns "It’s like a project in itself,
 ## Research Questions - March 2024
 
 1. What pedagogical tools and processes are available to support novices to overcome barriers to participation in game coding processes?
-2. How can game design patterns support the development of coding practices with novices?
+2. How does CHAT theory help us understand how game design patterns x  can be used in an evolving community of novice game makers?
 3. How can learners build agency in an evolving community of game makers?
 
 
@@ -212,9 +212,9 @@ https://docs.google.com/document/d/19PafC_w_7uObYL4v86IGeeFZTw2yKxjHfP_k85rHk_s/
 
 <!-- For the preceding ten minutes, the parent and child dyad had been struggling with a tutorial chapter in the online course manual textbook, included as Appendix.tech.samplechapter, which explains how to add the pattern of keys and doors. In this pattern, players must collect a key and then navigate to a door to progress to the next level. The parent, Suzanna, had been making multiple changes to the code while the child, Olivia, expressed boredom. Suzanna then suggested that Olivia ask the facilitator, Mick, for help in resolving the coding issue. Once the bug was resolved, Suzanna handed the keyboard to Olivia to test the now working game. The implementation of a new game design pattern (GDP) involves adding new code to the game. The amount of code and changes required varies depending on its complexity. Larger changes typically require more careful manipulation of code and subsequent debugging. The key and door pattern is relatively technically challenging to implement. Olivia is one of the younger participants, and the parent, Suzanna, has taken on the role of solving harder coding problems and, in doing so, has built important proficiency in coding practice.
 
-The parent takes action to involve her child in the design process when technically possible and to incorporate her child's interests. Suzanna overcomes her own hesitancy about asking for facilitator help by encouraging her child to seek assistance. When the coding problem is resolved, Suzanna signals to Olivia that it is her turn to return to the design process. This indicates that Suzanna recognises the greater potential for effective input from her child at these moments. After the blockage caused by debugging is removed, Suzanna immediately re-engages Olivia, prompting her to play-test the game. Suzanna skilfully navigates the process, eliciting and incorporating her child's interests in a variety of ways.
+The parent takes action to involve her child in the design process when technically possible and to incorporate her child's interests. Suzanna overcomes her own hesitancy about asking for facilitator help by encouraging her child to seek assistancehttps://docs.google.com/document/d/1Ce2cYIYnFCd9GM8zRntBd7lrud-dMbbrtgEQMoGNRmE/edit?tab=t.0. When the coding problem is resolved, Suzanna signals to Olivia that it is her turn to return to the design process. This indicates that Suzanna recognises the greater potential for effective input from her child at these moments. After the blockage caused by debugging is removed, Suzanna immediately re-engages Olivia, prompting her to play-test the game. Suzanna skilfully navigates the process, eliciting and incorporating her child's interests in a variety of ways.
 
-The child also shows initiative, particularly in relation to level design. There is an awareness of and playfulness surrounding the conventions of a platformer game as a dynamic system, which drives their work on the design and coding mechanics of the game. An understanding of the game as a dynamic system becomes especially evident in the parent’s alarm when, shortly after this interaction, the child deletes all elements of hazard in one level. The pair use the names of the game design patterns they are working on (Adding Levels and Keys and Doors) (Key 44 in Vignette 2). Evidence suggests that Olivia (child) is building a connection to the game-making pattern. In Key 12 in Vignette 2, abbreviations of the GDP names, Key and Door and Levels, are repeated in a sing-song voice. Additionally, my description of the Key and Door pattern as a challenging pattern during the session's starting orientation, outlined in Vignette 11, provokes a strong reaction. The use of GDP terms as a lingua franca, a concept that underpins the broader utility of design patterns [@erickson_lingua_2000], to facilitate designing for others is explored in the next section. More broadly, the use of GDP concepts as an evolving design language for providing feedback, sharing knowledge, making requests and other purposes during community activities, pair interactions and individual work is explored in the following sections. -->
+The child also shows initiative, particularly in relation to level design. There is an awareness of and playfulness surrounding the conventions of a platformer game as a dynamic system, which drives their work on the design and coding mechanics of the game. An understanding of the game as a dynamic system becomes especially evident in the parent’s alarm when, shortly after this interaction, the child deletes all elements of hazard in one level. The pair use the names of the game design patterns they are working on (Adding Levels and Keys and Doors) (Key 44 in Vignette 2). Evidence suggests that Olivia (child) is building a connection to the game-making pattern. In Key 12 in Vignette 2, abbreviations of the GDP names, Key and Door and Levels, are repeated in a sing-song voice. Additionally, my https://docs.google.com/document/d/1Ce2cYIYnFCd9GM8zRntBd7lrud-dMbbrtgEQMoGNRmE/edit?tab=t.0description of the Key and Door pattern as a challenging pattern during the session's starting orientation, outlined in Vignette 11, provokes a strong reaction. The use of GDP terms as a lingua franca, a concept that underpins the broader utility of design patterns [@erickson_lingua_2000], to facilitate designing for others is explored in the next section. More broadly, the use of GDP concepts as an evolving design language for providing feedback, sharing knowledge, making requests and other purposes during community activities, pair interactions and individual work is explored in the following sections. -->
 
 <!-- **Transition**
 
@@ -257,11 +257,7 @@ The research aims of this study focus on the under explored areas of social and 
 Despite this, the making process surfaced and allow the exploration of surfacing of computational thinking and other curricular concepts.
 
 
-Given that this dimension is not explored in the thesis which has a greater focus on community and social aspects of use of GDPs, examples of personal appropriation are included here only briefly (additional examples may be included in  Appendix.learning)
 
-Additionally, the repeated, solo, incremental changes of the details of implementation of game design patterns indicate a personal appropriation of concepts like game feel and challenge and design processes.
-
-Papert's research on Microworlds saw one of the roles learning designers to shape the affordances of playful learning environments to steer learners to explore scientific concepts,  mathematical concepts, for example geometry in Turtle computing.
 
 Despite this positioning, given the potential to adapt this learning design to a more formal environment to address needs outlined in the introductory chapter, from P2 onwards I began to augment the learning design to suit curriculum oriented teaching and assessment of computational thinking concepts and skills, a process which resulted in a learning map of curricular concepts included here as Table 6.x .
 
@@ -278,9 +274,18 @@ Despite this positioning, given the potential to adapt this learning design to a
 
 Table 6.x. Learning Dimensions of the 3M Game Making Model
 
+
+Conceptions of personal appropriation should not be limited to only the curricular concepts included in the learning map, the many of the behaviours explored above show both the appropriation and feeding back of varied understandings of game design patterns and related concepts and skills.
+
+The repeated, solo, incremental changes of the details of implementation of game design patterns indicate a personal appropriation of concepts like game feel and challenge and design processes.
+
+Given that this dimension is not explored in the thesis which has a greater focus on community and social aspects of use of GDPs, examples of personal appropriation are included here only briefly (additional examples may be included in  Appendix.learning)
+
+Papert's research on Microworlds saw one of the roles learning designers to shape the affordances of playful learning environments to steer learners to explore scientific concepts,  mathematical concepts, for example geometry in Turtle computing.
+
 Appendix.learningmap explores in more detail the evolution of this map, which acknowledges significant tensions in integration of concepts into a informal context, and draws on the process and rationale of Bevan and Petrich's  [-@bevan_learning_2015; -@petrich_it_2013] work to bring a similar learning map to a seemingly chaotic tinkering and making process in museum contexts. A summary of my book chapter [@chesterman_game_2023] exploring these issues with recommendations for practitioners is included in Appendix.learningmap
 
-This exploration focuses on the potential of the 3M learning design rather than making claims on the suitability to develop CT via game making which is explored extensively in other research. Conceptions of personal appropriation should not be limited to only the curricular concepts included in the learning map, the many of the behaviours explored above show both the appropriation and feeding back of varied understandings of game design patterns and related concepts and skills.
+This exploration focuses on the potential of the 3M learning design rather than making claims on the suitability to develop CT via game making which is explored extensively in other research.
 
 Rogoff's third plane of analysis, one  which mostly closely aligns with much educational research is that of personal appropriation. Rogoff is careful to underline the bi-directional nature of the appropriation of personal knowledge, emphasising Vygotsky's foundational view of knowledge as being mutually constituted as participants feed their interpretation of knowledge back into the communities of which they are a part.  Given this bi-directional process, aspects of personal appropriation can be inferred from interpersonal interactions explored in the following section.
 
@@ -647,9 +652,6 @@ This area opens some interesting lines of questioning which are beyond the full 
 
 
 
-
-
-
 ## Use of GDPs in the cultural plane / community level of activity
 
 Following Rogoff's [@rogoff_observing_1995] three planes approach to analysis, the following section explores the use of GDPs at the community plane of activity. While Rogoff's earlier analysis of activity on a cultural plane emphasised the metaphor of apprenticeship, focusing on an already existing community, her later work with Gutiérrez [@gutierrez_cultural_2003] places greater emphasis on cultural activity as dynamic. This perspective examines existing and emerging norms and repertoires, adapted from participants’ engagement in other communities and contexts.
@@ -738,7 +740,7 @@ Article on intangibility of game feel.2025-1-8-DiscussionConclusion
 
 #### Summary: Home Funds and RQs - MOVED FROM CH. 7 TO 6
 
-This research supports findings of other research which highlight value of incorporating home interests in  games, coding and media projects [@resnick_mothers_2012; @papert_mindstorms:_1980]. It also aligns with PBL literature which advocates the personalisation of projects and the value of exploring concepts using home funds of knowledge [@moje_maestro_2001]
+This research supports findings of other research which highlight value of incorporating home interests in  games, coding and media projects [@resnick_mothers_2012; @papert_mindstorms:_1980]. It also aligns with PBL literature which advocates the personalisation of projects and the value of exploring concepts using home funds of knowledge [@moje2001maestro]
 
 This research indicates that in particular, allowing participants to incorporate home interests can be highly motivating in early stages of the design process. It can also sustain the coding activity later in the process encouraging participants to overcome problems in order to share the personalised object created.
 
@@ -811,7 +813,7 @@ THIS SHOULD BE A RECAP GIVEN PREVIOUS USE IN EXAMPLES. USE TERMS IN VIGNETTE EXA
 
 Gutiérrez's focus on repertoires of practice, can be contrasted to  the focus of double stimulation and a form of experimental mediation within TADS [Sannio], to incorporate also a wider cultural focus of the learning process. NEXT CHAPTER?
 
-    Such a perspective on the relationship between culture and learning is also about attention to the “cultural mediation of thinking” (Moll, 1998) cited in [@digiacomo_seven_2017, p.44]
+    Such a perspective on the relationship between culture and learning is also about attention to the “cultural mediation of thinking” (Moll, 1998) cited in [@digiacomo_seven_2017] p.44
 
 It is of value to explore Gutiérrez's focus on movement of identity between settings and the role of facilitators to facilitate this via learning design in the context of this design.
 
