--- a/_posts/thesis_chapters/2025-1-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-1-6-Gdps.md
@@ -251,15 +251,8 @@ KEEP LINK BUT MOVE LATER
 The previous section began to touch on the personal appropriation of coding skill via the debugging process. -->
 
 
-As outlined in Chapter 2, the focus on skills and knowledge developed by participants is the dominant thread in research on digital coding and game making [@kafai_constructionist_2015-1; @papert_mindstorms:_1980].
 
-The research aims of this study focus on the under explored areas of social and cultural aspects of the coding process of novices. The design of this study does not suit full exploration of the personal plane of activity. HOW .
-Despite this, the making process surfaced and allow the exploration of surfacing of computational thinking and other curricular concepts.
-
-
-
-
-Despite this positioning, given the potential to adapt this learning design to a more formal environment to address needs outlined in the introductory chapter, from P2 onwards I began to augment the learning design to suit curriculum oriented teaching and assessment of computational thinking concepts and skills, a process which resulted in a learning map of curricular concepts included here as Table 6.x .
+As outlined in Chapter 2, the focus on skills and knowledge developed by participants is the dominant thread in research on digital coding and game making [@kafai_constructionist_2015-1; @papert_mindstorms:_1980]. The research aims of this study focus on the under explored areas of social and cultural aspects of the coding process of novices and as such the design of this study does not suit full exploration of the personal plane of activity. Despite this, the evolving design process surfaced activities which and allow the exploration of surfacing of computational thinking and other curricular concepts. Given the potential to adapt this learning design to a more formal environment to address needs outlined in the introductory chapter, from P2 onwards I began to augment the learning design to suit curriculum oriented teaching and assessment of computational thinking concepts and skills, a process which resulted in a learning map of curricular concepts included here as Table 6.x .
 
 |      Coding Concepts    | Systems Patterns    | Design Practices|
 |--------------|-----------|------------|
@@ -274,20 +267,24 @@ Despite this positioning, given the potential to adapt this learning design to a
 
 Table 6.x. Learning Dimensions of the 3M Game Making Model
 
+<!-- NOTE - this map focuses on more concrete concepts,  -->
 
-Conceptions of personal appropriation should not be limited to only the curricular concepts included in the learning map, the many of the behaviours explored above show both the appropriation and feeding back of varied understandings of game design patterns and related concepts and skills.
+Appendix.learningmap explores in more detail the evolution of this map, which acknowledges significant tensions in integration of concepts into a informal context, and draws on the process and rationale of Bevan and Petrich's  [-@bevan_learning_2015; -@petrich_it_2013] work to bring a similar learning map to a seemingly chaotic tinkering and making process in museum contexts. Papert's research on Microworlds saw one of the roles learning designers to shape the affordances of playful learning environments to steer learners to explore scientific concepts, mathematical concepts, for example geometry in Turtle computing. Similarly, the design of this research's template can be seen as a half-baked Microworld, with key conceptual affordances represented in the learning map above. A summary of a book chapter [@chesterman_game_2023] exploring these issues with recommendations for practitioners is included in Appendix.learningmap.
 
-The repeated, solo, incremental changes of the details of implementation of game design patterns indicate a personal appropriation of concepts like game feel and challenge and design processes.
+
+Evidence of personal appropriation in video data was not be limited to testable knowledge, many of the behaviours explored in this chapter show both the appropriation and feeding back of varied understandings of game design patterns and design practices and skills.
+
+For example, the repeated, solo, incremental changes by Toby in vignette 1 (V1), indicate a personal appropriation of and design processes, and concepts of game challenge related to the implementation of game design patterns.
+
+MORE
 
 Given that this dimension is not explored in the thesis which has a greater focus on community and social aspects of use of GDPs, examples of personal appropriation are included here only briefly (additional examples may be included in  Appendix.learning)
 
-Papert's research on Microworlds saw one of the roles learning designers to shape the affordances of playful learning environments to steer learners to explore scientific concepts,  mathematical concepts, for example geometry in Turtle computing.
+Rogoff's third plane of analysis, one  which mostly closely aligns with much educational research is that of personal appropriation. Rogoff is careful to underline the bi-directional nature of the appropriation of personal knowledge, emphasising Vygotsky's foundational view of knowledge as being mutually constituted as participants feed their interpretation of knowledge back into the communities of which they are a part. Given this bi-directional process, aspects of personal appropriation can be inferred from interpersonal interactions explored in the following section.
 
-Appendix.learningmap explores in more detail the evolution of this map, which acknowledges significant tensions in integration of concepts into a informal context, and draws on the process and rationale of Bevan and Petrich's  [-@bevan_learning_2015; -@petrich_it_2013] work to bring a similar learning map to a seemingly chaotic tinkering and making process in museum contexts. A summary of my book chapter [@chesterman_game_2023] exploring these issues with recommendations for practitioners is included in Appendix.learningmap
+<!-- This exploration focuses on the potential of the 3M learning design rather than making claims on the suitability to develop CT via game making which is explored extensively in other research. -->
 
-This exploration focuses on the potential of the 3M learning design rather than making claims on the suitability to develop CT via game making which is explored extensively in other research.
 
-Rogoff's third plane of analysis, one  which mostly closely aligns with much educational research is that of personal appropriation. Rogoff is careful to underline the bi-directional nature of the appropriation of personal knowledge, emphasising Vygotsky's foundational view of knowledge as being mutually constituted as participants feed their interpretation of knowledge back into the communities of which they are a part.  Given this bi-directional process, aspects of personal appropriation can be inferred from interpersonal interactions explored in the following section.
 
 <!-- The process of reusing and modify code to create a computer game can surface both abstract and concrete computing concepts present in the concrete application of code that have emerged organically at different stages of the creative process. -->
 
@@ -336,30 +333,27 @@ The use of a catalogue of design patterns addresses the tension between particip
 The previous chapter explored, from my perspective as a facilitator, how the use of a menu of GDPs helped address the tension between participant choice and the need for supporting materials on code implementation. Vignette 9 shows one of the few short episodes where I addressed the whole class, outlining the webpage listing the menu of patterns: _"It’s almost like this is our control panel. (you decide) what do you want to do next and we jump off from there."_. In addition to using written documentation as a framework, in P2, I guided supporting student facilitators to ask what patterns participants were currently working on or had recently completed as a way of provoking informal reflection on project progress. Given the integration of these elements into the learning design from P2 onwards, it would seem natural that participants would use the provided framework, at least in some capacity. Despite this, the evolving use of this documentation, the variations in its use, and the interpersonal interactions surrounding it merit further attention due to the diversity, evolution, and fundamental importance of GDP use at this interpersonal scope.
 
 
+Vignette 2 in this chapter shows the parent Suzanna's use of a step by step tutorial to address the child's objective of implementing chosen GDPs. Olivia is limited in her technical skills but leverages the concept of two GDPs in particular to persist in problem solving using the tutorial and trouble shooting using facilitator help. Given Olivia's limited computer literacy (explored in the Vignette commentary) the idea of the GDP is likely to be from a cultural source, most likely playtesting. By way of contrast, Toby in Vignette 1 (see V1.8 - V1.17) engages in lone working, copying a code from code snippet example of the game design pattern which he chose from a graphical menu of patterns. His independence in adding new features using supporting documentation without facilitator support helps him take on a mantle of a mentor inspiring and helping others add the same GDPs to their games.
 
-<!-- The decision to base supporting resources around a menu of game design patterns was an end product of a mutual evolution. -->
 
-<!-- My data does not capture this stage of the use of starting activities which selected key changes to code the P2 when participants used this resource. However I've used the cards and template game on many other groups and public events to replicate the very early stages of interaction. From journal notes on these repeated  observations,
-Participants used both  printed resources and where possible direct forms of help between peer participants and any facilitators present.
-other COMMENTs HERE -->
-
-Vignette 2 in this chapter shows the parent Suzanna's use of a step by step tutorial to address the child's objective of implementing chosen GDPs. Olivia is limited in her technical skills but leverages the concept of two GDPs in particular to persist in problem solving using the tutorial and trouble shooting using facilitator help. Given Olivia's limited computer literacy (explored in the Vignette commentary) the idea of the GDP is likely to be from a cultural source, most likely playtesting. By way of contrast, Toby in Vignette 1 engages in lone working, copying a code from code snippet example of the game design pattern which he chose from a graphical menu of patterns. His independence in adding new features using supporting documentation without facilitator support helps him take on a mantle of a mentor inspiring and helping others add the same GDPs to their games.
-(EXPLORED ABOVE?)
-
-OTHER DATA  HERE -
+OTHER DATA  HERE - Other examples include,
 Examples from the data of participants using GDPs as a framework for organisation and project navigations.
+
+Not all participants engage with this menu: a later section shows how GDPs picked up by one learner, via provided documentation e.g Toby are propagate in other ways.
 
 <!-- The previous chapter also described the use of starting activities which selected key changes to code or simplified design processes designed to maximise personalisation and changes to the starting game template. -->
 
-These varied forms of documentation, and their varied adoption and propagation represent different approaches to  scaffolding the process of becoming familiar with and then modifying to the code in often increasingly ambitious ways inline with the stages and ethos of a use-modify-create (UMC) approach. [source]
+In summary,
+The evidence supports my design decisions outlined in Chapter 5 to address the tensions between choice based approaches and the danger of lock of of support in P1 with technical and organisational processes. The evidence aligns with existing concepts including:  providing shorter, just-in-time tutorials to reduce barriers associated with more extensive instruction-based approaches including barriers of literacy [@dietz_design_2021; @resnick_coding_2020].
 
 
 <!-- NOTE ARE DIFFERENT APPROACHES BEST EXPLORED HERE OR SOMEWHERE ELSE? -->
+
+MOVE? INCLUSIVE DESIGN SUMMARY AT END.
+These varied forms of documentation, and their varied adoption and propagation represent different approaches to  scaffolding the process of becoming familiar with and then modifying to the code in often increasingly ambitious ways inline with the stages and ethos of a use-modify-create (UMC) approach. [source]
+
 Key characteristics of structuring support around quick start activities and a subsequent menu of GDPs which align with existing research include:
 
-- supporting the value of informal approaches to learning technology [ITO etc] whilst avoiding the lack of support in P1 where participants called out for more support with technical and organisational processes.
-- providing shorter, just-in-time tutorials
-to reduce barriers associated with more extensive instruction-based approaches including barriers of literacy [@dietz_design_2021; @resnick_coding_2020].
 - The use of a menu / collection of resources can be considered an inclusive educational practice and offer a rich description of a concrete example which aims to align to inclusive, practice-based frameworks like UDL and PBL. While this may involve more work in advance, the benefits to inclusive practice merit it.
 
 
@@ -502,10 +496,10 @@ Molly: “Nadine !”
 Molly then makes face, wiggles head and shrugs at parent peer. The other parent laughs.
 Nadine arrives to help.
 
-    <!-- The implementation of some GDP involved the use of different tools and activities. As learners build the familiarity with the component actions needed to implement design patterns, some start to specialise as they divide labour between pairs or Rather than promising the transfer abstract concepts to other domains, we see learners build competency in participation in replicable processes. These processes which aid future iterations of the GDP implementation design cycle. The process of operationalisation of these sets of actions contributes to the creation of an informal, complex networked resource of operations which complement the more visible curated catalogue of GDPs.
-    peers. -->
+<!-- The implementation of some GDP involved the use of different tools and activities. As learners build the familiarity with the component actions needed to implement design patterns, some start to specialise as they divide labour between pairs or Rather than promising the transfer abstract concepts to other domains, we see learners build competency in participation in replicable processes. These processes which aid future iterations of the GDP implementation design cycle. The process of operationalisation of these sets of actions contributes to the creation of an informal, complex networked resource of operations which complement the more visible curated catalogue of GDPs.
+peers. -->
 
-    <!-- Structuring code implementation on relatively small code stages of GDP implementation steers the production process towards relatively frequent iterations of design cycle. Specifically the design stages here typically involve; ideation, planning, implementation, testing and modification and sharing via playtesting. THIS IS EXPLORED IN THE NEXT CHAPTER SO DROP OR ONLY BRIEFLY REFERENCE. -->
+<!-- Structuring code implementation on relatively small code stages of GDP implementation steers the production process towards relatively frequent iterations of design cycle. Specifically the design stages here typically involve; ideation, planning, implementation, testing and modification and sharing via playtesting. THIS IS EXPLORED IN THE NEXT CHAPTER SO DROP OR ONLY BRIEFLY REFERENCE. -->
 
 ### Discussion on division of labour in the video data
 
