drilling down into vignettes

--- a/_posts/thesis_chapters/2025-1-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-1-6-Gdps.md
@@ -330,10 +330,11 @@ This section examines the use of GDPs to facilitate guided participation via int
 
 The use of a catalogue of design patterns addresses the tension between participants' choice and the need for documentation to support the technical implementation of code structures. However, not all participants used the provided instructions and developed diverse methods to access support for implementing patterns. At the cultural level of activity analysis, the previous section outlined how providing a menu of game design patterns enabled participants to select patterns aligned with their personal interests, potentially reducing feelings of alienation from coding or game-making culture. This section further examines how a curated collection of game patterns, along with supporting documentation, created opportunities and influenced participants' experiences on the interpersonal plane of activity.
 
-The previous chapter explored, from my perspective as a facilitator, how the use of a menu of GDPs helped address the tension between participant choice and the need for supporting materials on code implementation. Vignette 9 shows one of the few short episodes where I addressed the whole class, outlining the webpage listing the menu of patterns: _"It’s almost like this is our control panel. (you decide) what do you want to do next and we jump off from there."_. In addition to using written documentation as a framework, in P2, I guided supporting student facilitators to ask what patterns participants were currently working on or had recently completed as a way of provoking informal reflection on project progress. Given the integration of these elements into the learning design from P2 onwards, it would seem natural that participants would use the provided framework, at least in some capacity. Despite this, the evolving use of this documentation, the variations in its use, and the interpersonal interactions surrounding it merit further attention due to the diversity, evolution, and fundamental importance of GDP use at this interpersonal scope.
+The previous chapter explored, from my perspective as a facilitator, how the use of a menu of GDPs helped address the tension between participant choice and the need for supporting materials on code implementation. Vignette 9 outlines a rare interlude where I addressed the whole class, describing the webpage presenting the collection of GDPs as a graphical menu.  _"It’s almost like this is our control panel. You decide what do you want to do next and we jump off from there."_.
 
+Given the integration of these elements into the learning design from P2 onwards, it would seem natural that participants would use the provided framework, at least in some capacity. Despite this, the evolving use of this documentation, the variations in its use, and the interpersonal interactions surrounding it merit further attention due to the diversity, evolution, and fundamental importance of GDP use at this interpersonal scope.
 
-Vignette 2 in this chapter shows the parent Suzanna's use of a step by step tutorial to address the child's objective of implementing chosen GDPs. Olivia is limited in her technical skills but leverages the concept of two GDPs in particular to persist in problem solving using the tutorial and trouble shooting using facilitator help. Given Olivia's limited computer literacy (explored in the Vignette commentary) the idea of the GDP is likely to be from a cultural source, most likely playtesting. By way of contrast, Toby in Vignette 1 (see V1.8 - V1.17) engages in lone working, copying a code from code snippet example of the game design pattern which he chose from a graphical menu of patterns. His independence in adding new features using supporting documentation without facilitator support helps him take on a mantle of a mentor inspiring and helping others add the same GDPs to their games.
+Vignette 2 (V2.) observes parent Suzanna's use of a step by step tutorial to address the child's goal of implementing a chosen GDPs. Olivia is limited in her technical skills but leverages the concept of two GDPs in particular to persist in problem solving using the tutorial and trouble shooting using facilitator help. Given Olivia's limited computer literacy (explored in the Vignette commentary) the idea of the GDP is likely to be from a cultural source, most likely playtesting. By way of contrast, Toby in Vignette 1 (see V1.8 - V1.17) engages in lone working, copying a code from code snippet example of the game design pattern which he chose from a graphical menu of patterns. His independence in adding new features using supporting documentation without facilitator support helps him take on a mantle of a mentor inspiring and helping others add the same GDPs to their games.
 
 
 OTHER DATA  HERE - Other examples include,
@@ -341,10 +342,12 @@ Examples from the data of participants using GDPs as a framework for organisatio
 
 Not all participants engage with this menu: a later section shows how GDPs picked up by one learner, via provided documentation e.g Toby are propagate in other ways.
 
+In addition to using written documentation as a framework, in P2, I guided supporting student facilitators to ask what patterns participants were currently working on or had recently completed as a way of provoking informal reflection on project progress.
+
+
 <!-- The previous chapter also described the use of starting activities which selected key changes to code or simplified design processes designed to maximise personalisation and changes to the starting game template. -->
 
-In summary,
-The evidence supports my design decisions outlined in Chapter 5 to address the tensions between choice based approaches and the danger of lock of of support in P1 with technical and organisational processes. The evidence aligns with existing concepts including:  providing shorter, just-in-time tutorials to reduce barriers associated with more extensive instruction-based approaches including barriers of literacy [@dietz_design_2021; @resnick_coding_2020].
+_In summary,_ The evidence supports my design decisions outlined in Chapter 5 to address the tensions between choice based approaches and the danger of lock of of support in P1 with technical and organisational processes. The evidence aligns with existing concepts including:  providing shorter, just-in-time tutorials to reduce barriers associated with more extensive instruction-based approaches including barriers of literacy [@dietz_design_2021; @resnick_coding_2020].
 
 
 <!-- NOTE ARE DIFFERENT APPROACHES BEST EXPLORED HERE OR SOMEWHERE ELSE? -->
